updated logo and updated services information

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="flex mx-[-16px] items-center justify-between relative">
           <div class="px-4 w-60 max-w-full">
             <a href="index.html" class="header-logo w-full block py-6 lg:py-8">
-              <img src="images/logo/logo.png" alt="logo" class="w-full" width="123" height="16" />
+              <img src="images/logo/flogo.png" alt="logo" class="w-full" width="123" height="16" />
             </a>
           </div>
           <div class="flex px-4 justify-between items-center w-full">
@@ -91,12 +91,11 @@
           <div class="w-full lg:w-5/12 px-4">
             <div class="hero-content">
               <h1 class="text-dark font-bold text-4xl sm:text-[42px] lg:text-[40px] xl:text-[42px] leading-snug mb-3">
-                Tailwind CSS Site<br />
-                Template For Portfolio <br />
+               Your Next Guest's<br />
+                First Impression!<br />
               </h1>
               <p class="text-base mb-8 text-body-color max-w-[480px]">
-                A Complete Tailwind CSS Website Template Specially Crafted for - Digital Agency, Design Agency and Portfolio and Business Websites. Comes with All Essential Components and Pages You
-                Need to Launch a Complete Portfolio Site.
+                You can count on a spotless guest-ready space every time.
               </p>
               <ul class="flex flex-wrap items-center">
                 <li>
@@ -104,40 +103,10 @@
                     href="javascript:void(0)"
                     class="py-4 px-10 lg:px-8 xl:px-10 inline-flex items-center justify-center text-center text-white text-base bg-primary hover:bg-opacity-90 font-normal rounded-lg"
                   >
-                    Get Started
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)" class="py-4 px-10 lg:px-8 xl:px-10 inline-flex items-center justify-center text-center text-base font-normal text-body-color hover:text-primary">
-                    <span class="mr-2">
-                      <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="11" cy="11" r="11" fill="#3056D3" />
-                        <rect x="6.90906" y="13.3636" width="8.18182" height="1.63636" fill="white" />
-                        <rect x="10.1818" y="6" width="1.63636" height="4.09091" fill="white" />
-                        <path d="M11 12.5454L13.8343 9.47726H8.16576L11 12.5454Z" fill="white" />
-                      </svg>
-                    </span>
-                    Download Brochure
+                    Get a Quote
                   </a>
                 </li>
               </ul>
-              <div class="clients pt-16">
-                <p class="font-normal text-xs flex items-center text-body-color mb-2">
-                  Some Of Our Clients
-                  <span class="w-8 h-[1px] bg-body-color inline-block ml-2"></span>
-                </p>
-                <div class="flex items-center">
-                  <div class="w-full py-3 mr-4">
-                    <img src="images/brands/ayroui-1.svg" alt="ayroui" />
-                  </div>
-                  <div class="w-full py-3 mr-4">
-                    <img src="images/brands/graygrids-1.svg" alt="graygrids" />
-                  </div>
-                  <div class="w-full py-3 mr-4">
-                    <img src="images/brands/uideck-1.svg" alt="uideck" />
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="hidden lg:block lg:w-1/12 px-4"></div>
@@ -271,7 +240,7 @@
     <!-- ====== Services Section Start -->
     <section id="services" class="bg-white pt-20 lg:pt-[120px] pb-12 lg:pb-[90px]">
         <div class="w-full mx-auto text-center">
-              <h2 class="font-bold text-black text-3xl sm:text-4xl md:text-[45px] mb-5">Services</h2>
+              <h2 class="font-bold text-black text-3xl sm:text-4xl md:text-[45px] mb-5">Residential Services</h2>
         </div>
 <div class="w-full mx-auto bg-white rounded-lg shadow">
     <div class="flex md:flex-row">
@@ -287,7 +256,7 @@
                         aria-controls="content-residential"
                         aria-selected="true"
                     >
-                       Residential/Commercial Cleaning
+                       Basic Clean
                     </button>
                 </li>
                 <li role="presentation">
@@ -300,7 +269,7 @@
                         aria-controls="content-security"
                         aria-selected="false"
                     >
-                        Move-In/Move-Out Cleaning
+                        Deep Clean
                     </button>
                 </li>
                 <li role="presentation">
@@ -313,7 +282,7 @@
                         aria-controls="content-postconstruction"
                         aria-selected="false"
                     >
-                        Post-Construction Cleaning
+                        Move In/Move Out
                     </button>
                 </li>
                 <li role="presentation">
@@ -326,7 +295,7 @@
                         aria-controls="content-rentalproperty"
                         aria-selected="false"
                     >
-                       Rental Property Cleaning
+                       One-Time Cleaning
                     </button>
                 </li>
                 <li role="presentation">
@@ -339,26 +308,14 @@
                         aria-controls="content-linenservices"
                         aria-selected="false"
                     >
-                        Linen Services for Rentals
-                    </button>
-                </li>
-                <li role="presentation">
-                    <button
-                        class="tab-button-vertical inline-block w-full text-left p-4 border-transparent text-gray-500 hover:text-gray-700 hover:font-bold"
-                        id="tab-propertymanagement"
-                        data-tab-target="#content-propertymanagement"
-                        type="button"
-                        role="tab"
-                        aria-controls="content-propertymanagement"
-                        aria-selected="false"
-                    >
-                        Property Management
+                       Custom Cleaning
                     </button>
                 </li>
             </ul>
         </div>
 
         <div id="vertical-tabs-content" class="flex-grow p-4 md:pt-0">
+          <!-- Basic Clean-->
             <div
                 class="tab-content-vertical"
                 id="content-residential"
@@ -369,12 +326,12 @@
                     <img class="w-full" src="images/services/0.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        We deliver quality cleaning to homes and commercial spaces.  There's no job too big or too small.  Our attention to details goes where we go!
+                        Bathrooms, floors, tops of furniture, and trash—perfect for regular upkeep.
                       </p>
                     </div>
                   </div>
                 </div>
-
+             <!-- Deep Clean-->
             <div
                 class="tab-content-vertical hidden"
                 id="content-movein"
@@ -385,12 +342,12 @@
                     <img class="w-full" src="images/services/1.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        Moving is a big stressful process.  Let us help you make it easier and cleaner.
+                        Includes everything in Basic, plus trim, blinds, windows, and furniture edges. Ideal for seasonal resets or special occasions.
                       </p>
                     </div>
                   </div>
             </div>
-
+             <!-- Move In/Move Out Clean-->
             <div
                 class="tab-content-vertical hidden"
                 id="content-postconstruction"
@@ -401,11 +358,12 @@
                     <img class="w-full" src="images/services/2.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        Post-Construction cleaning consists of highly trained professionals who are extremely familiar with the needs and requirements of this very specific and detailed cleaning situation.
+                        A full deep clean to prepare your home for new beginnings—whether you're arriving or leaving.
                       </p>
                     </div>
                   </div>
             </div>
+            <!--One-Time Cleaning-->
             <div
                 class="tab-content-vertical hidden"
                 id="content-rentalproperty"
@@ -416,7 +374,7 @@
                     <img class="w-full" src="images/services/3.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        We loveand specialize in rental property cleaning!  All of our properties have a 5 star rating on cleaning.
+                        No strings attached. Just a single, thorough clean when you need it most.
                       </p>
                     </div>
                   </div>
@@ -431,22 +389,169 @@
                     <img class="w-full" src="images/services/4.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        Along with the option of cleaning your rental property, we also provide comprehensive linen services.
+                         Have something unique in mind? Let’s talk. We’ll build a plan and estimate just for you.
                       </p>
                     </div>
                   </div>
             </div>
+        </div>
+
+    </div>
+</div>
+
+    </section>
+    <section id="services" class="bg-white pt-20 lg:pt-[120px] pb-12 lg:pb-[90px]">
+        <div class="w-full mx-auto text-center">
+              <h2 class="font-bold text-black text-3xl sm:text-4xl md:text-[45px] mb-5">Commercial Services</h2>
+        </div>
+<div class="w-full mx-auto bg-white rounded-lg shadow">
+    <div class="flex md:flex-row">
+        <div class="container ">
+            <ul class="flex flex-col" id="vertical-tabs-tab" role="tablist">
+                <li role="presentation">
+                    <button
+                        class="tab-button-vertical inline-block w-full text-left p-4   font-medium text-sm text-blue-600 border-blue-600 hover:font-bold active-tab-style"
+                        id="tab-residential"
+                        data-tab-target="#content-residential"
+                        type="button"
+                        role="tab"
+                        aria-controls="content-residential"
+                        aria-selected="true"
+                    >
+                       Basic Clean
+                    </button>
+                </li>
+                <li role="presentation">
+                    <button
+                        class="tab-button-vertical inline-block w-full text-left p-4  border-transparent text-gray-500 hover:text-gray-700 hover:font-bold"
+                        id="tab-movein"
+                        data-tab-target="#content-movein"
+                        type="button"
+                        role="tab"
+                        aria-controls="content-security"
+                        aria-selected="false"
+                    >
+                        Deep Clean
+                    </button>
+                </li>
+                <li role="presentation">
+                    <button
+                        class="tab-button-vertical inline-block w-full text-left p-4  border-transparent text-gray-500 hover:text-gray-700 hover:font-bold"
+                        id="tab-postconstruction"
+                        data-tab-target="#content-postconstruction"
+                        type="button"
+                        role="tab"
+                        aria-controls="content-postconstruction"
+                        aria-selected="false"
+                    >
+                        Move In/Move Out
+                    </button>
+                </li>
+                <li role="presentation">
+                    <button
+                        class="tab-button-vertical inline-block w-full text-left p-4  border-transparent text-gray-500 hover:text-gray-700 hover:font-bold"
+                        id="tab-rentalproperty"
+                        data-tab-target="#content-rentalproperty"
+                        type="button"
+                        role="tab"
+                        aria-controls="content-rentalproperty"
+                        aria-selected="false"
+                    >
+                       One-Time Cleaning
+                    </button>
+                </li>
+                <li role="presentation">
+                    <button
+                        class="tab-button-vertical inline-block w-full text-left p-4 border-transparent text-gray-500 hover:text-gray-700 hover:font-bold"
+                        id="tab-linenservices"
+                        data-tab-target="#content-linenservices"
+                        type="button"
+                        role="tab"
+                        aria-controls="content-linenservices"
+                        aria-selected="false"
+                    >
+                       Custom Cleaning
+                    </button>
+                </li>
+            </ul>
+        </div>
+
+        <div id="vertical-tabs-content" class="flex-grow p-4 md:pt-0">
+          <!-- Basic Clean-->
             <div
-                class="tab-content-vertical hidden"
-                id="content-propertymanagement"
+                class="tab-content-vertical"
+                id="content-residential"
                 role="tabpanel"
-                aria-labelledby="tab-propertymanagement"
+                aria-labelledby="tab-residential"
             >
-                 <div class="max-w-sm rounded overflow-hidden shadow-lg">
-                    <img class="w-full" src="images/services/5.png" alt="Sunset in the mountains">
+                <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                    <img class="w-full" src="images/services/0.png" alt="Sunset in the mountains">
                     <div class="px-6 py-4 bg-black">
                       <p class="text-white bg-black text-base">
-                        We also provide property management services!  We know that your time is extremely important, so we deal with all of your property issues, handle maintenance and repairs, and qualify new vendors.
+                        Restrooms, floors, surfaces, and trash—ideal for daily or weekly maintenance.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+             <!-- Deep Clean-->
+            <div
+                class="tab-content-vertical hidden"
+                id="content-movein"
+                role="tabpanel"
+                aria-labelledby="tab-movein"
+            >
+                 <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                    <img class="w-full" src="images/services/1.png" alt="Sunset in the mountains">
+                    <div class="px-6 py-4 bg-black">
+                      <p class="text-white bg-black text-base">
+                        Includes all Basic services, plus trim, blinds, windows, and furniture edges—great for quarterly or seasonal refreshes.
+                      </p>
+                    </div>
+                  </div>
+            </div>
+             <!-- Move In/Move Out Clean-->
+            <div
+                class="tab-content-vertical hidden"
+                id="content-postconstruction"
+                role="tabpanel"
+                aria-labelledby="tab-postconstruction"
+            >
+                 <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                    <img class="w-full" src="images/services/2.png" alt="Sunset in the mountains">
+                    <div class="px-6 py-4 bg-black">
+                      <p class="text-white bg-black text-base">
+                         Preparing or closing a commercial space? We’ll handle the full deep clean to ensure a smooth transition.
+                      </p>
+                    </div>
+                  </div>
+            </div>
+            <!--One-Time Cleaning-->
+            <div
+                class="tab-content-vertical hidden"
+                id="content-rentalproperty"
+                role="tabpanel"
+                aria-labelledby="tab-rentalproperty"
+            >
+                 <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                    <img class="w-full" src="images/services/3.png" alt="Sunset in the mountains">
+                    <div class="px-6 py-4 bg-black">
+                      <p class="text-white bg-black text-base">
+                        Hosting an event or recovering from one? We’ll get your space back to business-ready.
+                      </p>
+                    </div>
+                  </div>
+            </div>
+             <div
+                class="tab-content-vertical hidden"
+                id="content-linenservices"
+                role="tabpanel"
+                aria-labelledby="tab-linenservices"
+            >
+                 <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                    <img class="w-full" src="images/services/4.png" alt="Sunset in the mountains">
+                    <div class="px-6 py-4 bg-black">
+                      <p class="text-white bg-black text-base">
+                        Need something specific? We’ll provide a tailored estimate and plan that fits your business.
                       </p>
                     </div>
                   </div>
@@ -665,7 +770,7 @@
     <!-- ====== CTA Section End  -->
 
     <!-- ====== Team Section Start -->
-    <section class="pt-20 lg:pt-[120px]">
+    <!-- <section class="pt-20 lg:pt-[120px]">
       <div class="container">
         <div class="flex flex-wrap -mx-4">
           <div class="w-full px-4">
@@ -856,7 +961,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Team Section End -->
 
     <!-- ====== Pricing Section Start -->
@@ -1583,7 +1688,7 @@
     // Inactive state classes for vertical tabs (border on the right is transparent)
     const inactiveTabClasses = 'border-transparent text-gray-500 hover:text-gray-700hover:font-bold';
     // Active state classes for vertical tabs (blue border on the right)
-    const activeTabClasses = 'font-bold';
+    const activeTabClasses = 'font-bold text-green-500';
 
     tabButtons.forEach(button => {
         button.addEventListener('click', () => {
